--- a/puppet/compute-role.yaml
+++ b/puppet/compute-role.yaml
@@ -226,6 +226,96 @@ resources:
       ManagementIpSubnet: {get_attr: [ManagementPort, ip_subnet]}
       ManagementIpUri: {get_attr: [ManagementPort, ip_address_uri]}
 
+  NetHostMap:
+    type: OS::Heat::Value
+    properties:
+      type: json
+      value:
+        external:
+          fqdn:
+            list_join:
+            - '.'
+            - - {get_attr: [NovaCompute, name]}
+              - external
+              - {get_param: CloudDomain}
+          short:
+            list_join:
+            - '.'
+            - - {get_attr: [NovaCompute, name]}
+              - external
+        internal_api:
+          fqdn:
+            list_join:
+            - '.'
+            - - {get_attr: [NovaCompute, name]}
+              - internalapi
+              - {get_param: CloudDomain}
+          short:
+            list_join:
+            - '.'
+            - - {get_attr: [NovaCompute, name]}
+              - internalapi
+        storage:
+          fqdn:
+            list_join:
+            - '.'
+            - - {get_attr: [NovaCompute, name]}
+              - storage
+              - {get_param: CloudDomain}
+          short:
+            list_join:
+            - '.'
+            - - {get_attr: [NovaCompute, name]}
+              - storage
+        storage_mgmt:
+          fqdn:
+            list_join:
+            - '.'
+            - - {get_attr: [NovaCompute, name]}
+              - storagemgmt
+              - {get_param: CloudDomain}
+          short:
+            list_join:
+            - '.'
+            - - {get_attr: [NovaCompute, name]}
+              - storagemgmt
+        tenant:
+          fqdn:
+            list_join:
+            - '.'
+            - - {get_attr: [NovaCompute, name]}
+              - tenant
+              - {get_param: CloudDomain}
+          short:
+            list_join:
+            - '.'
+            - - {get_attr: [NovaCompute, name]}
+              - tenant
+        management:
+          fqdn:
+            list_join:
+            - '.'
+            - - {get_attr: [NovaCompute, name]}
+              - management
+              - {get_param: CloudDomain}
+          short:
+            list_join:
+            - '.'
+            - - {get_attr: [NovaCompute, name]}
+              - management
+        ctlplane:
+          fqdn:
+            list_join:
+            - '.'
+            - - {get_attr: [NovaCompute, name]}
+              - ctlplane
+              - {get_param: CloudDomain}
+          short:
+            list_join:
+            - '.'
+            - - {get_attr: [NovaCompute, name]}
+              - ctlplane
+
   NetworkConfig:
     type: OS::TripleO::Compute::Net::SoftwareConfig
     properties:
@@ -284,42 +374,12 @@ resources:
           extraconfig: {get_param: ExtraConfig}
           compute:
             tripleo::packages::enable_upgrade: {get_input: enable_package_upgrade}
-            fqdn_internal_api:
-              list_join:
-              - '.'
-              - - {get_attr: [NovaCompute, name]}
-                - internalapi
-                - {get_param: CloudDomain}
-            fqdn_storage:
-              list_join:
-              - '.'
-              - - {get_attr: [NovaCompute, name]}
-                - storage
-                - {get_param: CloudDomain}
-            fqdn_storage_mgmt:
-              list_join:
-              - '.'
-              - - {get_attr: [NovaCompute, name]}
-                - storagemgmt
-                - {get_param: CloudDomain}
-            fqdn_tenant:
-              list_join:
-              - '.'
-              - - {get_attr: [NovaCompute, name]}
-                - tenant
-                - {get_param: CloudDomain}
-            fqdn_management:
-              list_join:
-              - '.'
-              - - {get_attr: [NovaCompute, name]}
-                - management
-                - {get_param: CloudDomain}
-            fqdn_ctlplane:
-              list_join:
-              - '.'
-              - - {get_attr: [NovaCompute, name]}
-                - ctlplane
-                - {get_param: CloudDomain}
+            fqdn_internal_api: {get_attr: [NetHostMap, value, internal_api, fqdn]}
+            fqdn_storage: {get_attr: [NetHostMap, value, storage, fqdn]}
+            fqdn_storage_mgmt: {get_attr: [NetHostMap, value, storage_mgmt, fqdn]}
+            fqdn_tenant: {get_attr: [NetHostMap, value, tenant, fqdn]}
+            fqdn_management: {get_attr: [NetHostMap, value, management, fqdn]}
+            fqdn_ctlplane: {get_attr: [NetHostMap, value, ctlplane, fqdn]}
 
   NovaComputeDeployment:
     type: OS::TripleO::SoftwareDeployment
@@ -394,48 +454,13 @@ outputs:
   hostname_map:
     description: Mapping of network names to hostnames
     value:
-      external:
-        list_join:
-        - '.'
-        - - {get_attr: [NovaCompute, name]}
-          - external
-          - {get_param: CloudDomain}
-      internal_api:
-        list_join:
-        - '.'
-        - - {get_attr: [NovaCompute, name]}
-          - internalapi
-          - {get_param: CloudDomain}
-      storage:
-        list_join:
-        - '.'
-        - - {get_attr: [NovaCompute, name]}
-          - storage
-          - {get_param: CloudDomain}
-      storage_mgmt:
-        list_join:
-        - '.'
-        - - {get_attr: [NovaCompute, name]}
-          - storagemgmt
-          - {get_param: CloudDomain}
-      tenant:
-        list_join:
-        - '.'
-        - - {get_attr: [NovaCompute, name]}
-          - tenant
-          - {get_param: CloudDomain}
-      management:
-        list_join:
-        - '.'
-        - - {get_attr: [NovaCompute, name]}
-          - management
-          - {get_param: CloudDomain}
-      ctlplane:
-        list_join:
-        - '.'
-        - - {get_attr: [NovaCompute, name]}
-          - ctlplane
-          - {get_param: CloudDomain}
+      external: {get_attr: [NetHostMap, value, external, fqdn]}
+      internal_api: {get_attr: [NetHostMap, value, internal_api, fqdn]}
+      storage: {get_attr: [NetHostMap, value, storage, fqdn]}
+      storage_mgmt: {get_attr: [NetHostMap, value, storage_mgmt, fqdn]}
+      tenant: {get_attr: [NetHostMap, value, tenant, fqdn]}
+      management: {get_attr: [NetHostMap, value, management, fqdn]}
+      ctlplane: {get_attr: [NetHostMap, value, ctlplane, fqdn]}
   hosts_entry:
     description: >
       Server's IP address and hostname in the /etc/hosts format
@@ -455,47 +480,19 @@ outputs:
           DOMAIN: {get_param: CloudDomain}
           PRIMARYHOST: {get_attr: [NovaCompute, name]}
           EXTERNALIP: {get_attr: [ExternalPort, ip_address]}
-          EXTERNALHOST:
-            list_join:
-            - '.'
-            - - {get_attr: [NovaCompute, name]}
-              - external
+          EXTERNALHOST: {get_attr: [NetHostMap, value, external, short]}
           INTERNAL_APIIP: {get_attr: [InternalApiPort, ip_address]}
-          INTERNAL_APIHOST:
-            list_join:
-            - '.'
-            - - {get_attr: [NovaCompute, name]}
-              - internalapi
+          INTERNAL_APIHOST: {get_attr: [NetHostMap, value, internal_api, short]}
           STORAGEIP: {get_attr: [StoragePort, ip_address]}
-          STORAGEHOST:
-            list_join:
-            - '.'
-            - - {get_attr: [NovaCompute, name]}
-              - storage
+          STORAGEHOST: {get_attr: [NetHostMap, value, storage, short]}
           STORAGE_MGMTIP: {get_attr: [StorageMgmtPort, ip_address]}
-          STORAGE_MGMTHOST:
-            list_join:
-            - '.'
-            - - {get_attr: [NovaCompute, name]}
-              - storagemgmt
+          STORAGE_MGMTHOST: {get_attr: [NetHostMap, value, storage_mgmt, short]}
           TENANTIP: {get_attr: [TenantPort, ip_address]}
-          TENANTHOST:
-            list_join:
-            - '.'
-            - - {get_attr: [NovaCompute, name]}
-              - tenant
+          TENANTHOST: {get_attr: [NetHostMap, value, tenant, short]}
           MANAGEMENTIP: {get_attr: [ManagementPort, ip_address]}
-          MANAGEMENTHOST:
-            list_join:
-            - '.'
-            - - {get_attr: [NovaCompute, name]}
-              - management
+          MANAGEMENTHOST: {get_attr: [NetHostMap, value, management, short]}
           CTLPLANEIP: {get_attr: [NovaCompute, networks, ctlplane, 0]}
-          CTLPLANEHOST:
-            list_join:
-            - '.'
-            - - {get_attr: [NovaCompute, name]}
-              - ctlplane
+          CTLPLANEHOST: {get_attr: [NetHostMap, value, ctlplane, short]}
   nova_server_resource:
     description: Heat resource handle for the Nova compute server
     value:
