Add zaqar to the controller's list of services in roles_data.yaml
Change-Id: Iecafa7878fec20c707e94bdaca55f1489f3e338a

--- a/roles_data.yaml
+++ b/roles_data.yaml
@@ -96,6 +96,7 @@
     - OS::TripleO::Services::FluentdClient
     - OS::TripleO::Services::BarbicanApi
     - OS::TripleO::Services::PankoApi
+    - OS::TripleO::Services::Zaqar
 
 - name: Compute
   CountDefault: 1
