--- a/network/endpoints/endpoint_data.yaml
+++ b/network/endpoints/endpoint_data.yaml
@@ -205,6 +205,21 @@ Nova:
             '': /v2.1
     port: 8774
 
+NovaPlacement:
+    Internal:
+        net_param: NovaApi
+        uri_suffixes:
+            '': /placement
+    Public:
+        net_param: Public
+        uri_suffixes:
+            '': /placement
+    Admin:
+        net_param: NovaApi
+        uri_suffixes:
+            '': /placement
+    port: 8778
+
 NovaVNCProxy:
     Internal:
         net_param: NovaApi
