Fix SwiftStorage role.
We now fetch the name argument from the correctly named SwiftStorage
object.

Change-Id: I885505eadfc778ab57793c97af4d1c6739ec9614
Closes-Bug: #1647716

--- a/puppet/objectstorage-role.yaml
+++ b/puppet/objectstorage-role.yaml
@@ -226,13 +226,13 @@ resources:
           fqdn:
             list_join:
             - '.'
-            - - {get_attr: [Swiftexternal, name]}
+            - - {get_attr: [SwiftStorage, name]}
               - external
               - {get_param: CloudDomain}
           short:
             list_join:
             - '.'
-            - - {get_attr: [Swiftexternal, name]}
+            - - {get_attr: [SwiftStorage, name]}
               - external
         internal_api:
           fqdn:
