neutron: don't set router_delete_namespaces
It's no longer available in Neutron (removed in Mitaka). See:
I2a879213c3b095a007a4531f430a33cea9fdf1bd

Change-Id: I044c648eb8c4933667b8ea2c9159a30e5ebb7df3

--- a/puppet/services/neutron-l3.yaml
+++ b/puppet/services/neutron-l3.yaml
@@ -68,8 +68,7 @@ outputs:
       config_settings:
         map_merge:
         - get_attr: [NeutronBase, role_data, config_settings]
-        - neutron::agents::l3::router_delete_namespaces: True
-          neutron::agents::l3::agent_mode: {get_param: NeutronL3AgentMode}
+        - neutron::agents::l3::agent_mode: {get_param: NeutronL3AgentMode}
           tripleo.neutron_l3.firewall_rules:
             '106 neutron_l3 vrrp':
               proto: vrrp
