--- a/puppet/role.role.j2.yaml
+++ b/puppet/role.role.j2.yaml
@@ -160,6 +160,8 @@ resources:
         type: multipart
       - config: {get_resource: NodeUserData}
         type: multipart
+      - config: {get_resource: RoleUserData}
+        type: multipart
 
   # Creates the "heat-admin" user if configured via the environment
   # Should return a OS::Heat::MultipartMime reference via OS::stack_id
@@ -170,6 +172,11 @@ resources:
   # Should return a OS::Heat::MultipartMime reference via OS::stack_id
   NodeUserData:
     type: OS::TripleO::NodeUserData
+
+  # For optional operator role-specific userdata
+  # Should return a OS::Heat::MultipartMime reference via OS::stack_id
+  RoleUserData:
+    type: OS::TripleO::{{role}}::NodeUserData
 
   ExternalPort:
     type: OS::TripleO::{{role}}::Ports::ExternalPort
