Correction to SRIOV THT Examples
example for
 - NeutronSriovNumVFs
 - NeutronPhysicalDevMappings
as given, causes parsing error.

Change-Id: I71fb42f10dac70afa02244cd6629b3439f418d63
Closes-Bug: #1648351

--- a/puppet/services/neutron-sriov-agent.yaml
+++ b/puppet/services/neutron-sriov-agent.yaml
@@ -25,6 +25,7 @@ parameters:
       All physical networks listed in network_vlan_ranges
       on the server should have mappings to appropriate
       interfaces on each agent.
+      Example "tenant0:ens2f0,tenant1:ens2f1"
     type: comma_delimited_list
     default: ""
   NeutronExcludeDevices:
@@ -40,8 +41,8 @@ parameters:
   NeutronSriovNumVFs:
     description: >
       Provide the list of VFs to be reserved for each SR-IOV interface.
-      Format "<interface_name1>:<numvfs1>","<interface_name2>:<numvfs2>"
-      Example "eth1:4096","eth2:128"
+      Format "<interface_name1>:<numvfs1>,<interface_name2>:<numvfs2>"
+      Example "eth1:4096,eth2:128"
     type: comma_delimited_list
     default: ""
 
