--- a/puppet/services/tripleo-packages.yaml
+++ b/puppet/services/tripleo-packages.yaml
@@ -33,6 +33,14 @@ outputs:
       step_config: |
         include ::tripleo::packages
       upgrade_tasks:
+        - name: Check yum for rpm-python present
+          tags: step0
+          yum: "name=rpm-python state=present"
+          register: rpm_python_check
+        - name: Fail when rpm-python wasn't present
+          fail: msg="rpm-python package was not present before this run! Check environment before re-running"
+          when: rpm_python_check.changed != false
+          tags: step0
         - name: Update all packages
           tags: step3
           yum: name=* state=latest
