--- a/extraconfig/tasks/major_upgrade_pacemaker.yaml
+++ b/extraconfig/tasks/major_upgrade_pacemaker.yaml
@@ -91,7 +91,45 @@ resources:
     type: OS::Heat::SoftwareDeploymentGroup
     depends_on: BlockStorageUpgradeDeployment
     properties:
-      servers:  {get_param: controller_servers}
+      servers: {get_param: controller_servers}
       config: {get_resource: ControllerPacemakerUpgradeConfig_Step2}
       input_values: {get_param: input_values}
 
+  NovaApiDatabaseUpgradeConfig:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: puppet
+      config:
+        get_file: liberty_to_mitaka_nova_api_upgrade.pp
+
+  NovaApiDatabaseUpgradeDeployment:
+    type: OS::Heat::SoftwareDeploymentGroup
+    depends_on: ControllerPacemakerUpgradeDeployment_Step2
+    properties:
+      name: NovaApiDatabaseUpgradeDeployment
+      servers: {get_param: controller_servers}
+      config: {get_resource: NovaApiDatabaseUpgradeConfig}
+
+  NovaApiDatabasePostConfig:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: script
+      config: |
+        #!/bin/bash
+        set -eux
+        crudini --set /etc/nova/nova.conf api_database connection "$(hiera nova::api_database_connection)"
+        crudini --set /etc/nova/nova.conf neutron auth_plugin v3password
+        crudini --set /etc/nova/nova.conf neutron auth_url "$(hiera nova::api::identity_uri)"
+        if [ "$(hiera -c /etc/puppet/hiera.yaml bootstrap_nodeid)" = "$(facter hostname)" ]; then
+            nova-manage api_db sync
+            nova-manage db online_data_migrations
+        fi
+        systemctl restart openstack-nova-api
+
+  NovaApiDatabasePostUpgradeDeployment:
+    type: OS::Heat::SoftwareDeploymentGroup
+    depends_on: NovaApiDatabaseUpgradeDeployment
+    properties:
+      name: NovaApiDatabasePostUpgradeDeployment
+      servers: {get_param: controller_servers}
+      config: {get_resource: NovaApiDatabasePostConfig}
